# personal-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: mcp_servers.example.json
docs/: browser-automation-plan.md  code-sandbox-plan.md  quality-gate-plan.md
scripts/: dev.sh  install-hooks.sh  smart-check.sh
scripts/hooks/: post-commit  pre-push
skills/investment/: allocation-check.md  anomaly-diagnosis.md  portfolio-review.md
skills/investment/allocation-check/: SKILL.md
skills/investment/anomaly-diagnosis/: SKILL.md
skills/investment/portfolio-review/: SKILL.md
src/matrix/: __init__.py  __main__.py  auth.py  chat.py  config.py  logging_config.py  rate_limiter.py  store.py
src/matrix/agent/: __init__.py  base.py  commander.py  registry.py
src/matrix/chat/: __init__.py  _service.py  _utils.py
tests/: conftest.py  test_auth.py  test_baseline.py  test_browser_tools.py  test_chat.py  test_code_sandbox.py  test_config.py  test_deterministic_eval.py  test_e2e_p0_changes.py  test_evaluation.py  test_finance_tools.py  test_indirect_injection_guard.py  test_input_guard.py  test_llm_client.py  test_logging_config.py  test_memory.py  test_memory_evolution.py  test_orchestration.py  test_orchestration_nodes.py  test_otel.py  test_output_guard.py  test_rag.py  test_real_integration.py  test_reflexion.py  test_role.py  test_server.py  test_skills.py  test_tool_guard.py  test_tool_registry.py  test_trace_privacy.py  test_verification_strip.py
tests/baselines/: eval_dataset.json  quality_baseline.json  regression_baseline.json
(+137 files in other folders)
