[project]
name = "matrix"
version = "0.1.0"
description = "Project Matrix — 个人智能协作网络，通用 Agent 底座"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.6.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
]

[project.scripts]
matrix = "matrix.__main__:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]